Implement three independent modules with configurable PGN paths
- New AppConfig: reads config.properties from the working directory
  (created with defaults on first run); per-module keys
  pgn.mating-patterns.path / pgn.tactics.path / pgn.puzzles.path,
  defaulting to ~/ChessTrainerFX/pgn/<module>; folders auto-created
- New ResourceSeeder: copies bundled PGN resources into the configured
  module folder on first run (never overwrites existing files)
- PGNReader now reads from the filesystem (Path) instead of the classpath
- New ChapterLoader: scans a module folder for *.pgn with natural numeric
  ordering and builds Chapter objects (title fallback from file name)
- Main: all three tiles now work — MatingPatterns and Tactics show their
  chapters from the configured folders, Puzzles lists sub-category folders;
  module views built lazily and cached; removed the hardcoded list of 36
  classpath chapter paths
- MatePatternsView renamed to ChapterOverviewView (generic tile grid reused
  by all modules)

No new dependencies.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>